# acid-practice-python

./: .env  .gitignore  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/routers/: accounts.py
app/application/accounts/: create_account.py  get_account.py
app/core/: config.py
app/domain/: accounts.py
app/infrastructure/db/: pool.py  uow.py
app/infrastructure/repositories/: accounts.py
app/schemas/: accounts.py
migrations/: 001_create_wallet_schema.sql
scripts/: check_db.py
